feat: implement message delete
